feat: index page layout 구성
메인 페이지 레이아웃 구성
nav-bar 구현(임시)

Related to: #1

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,9 +12,23 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 0.8rem 2rem;
-            background-color: var(--bg-color);
+            /*background-color: var(--bg-color);*/
             border-bottom: 1px solid #ccc;
         }
+
+        /*.header-container {*/
+        /*    margin: 0 0 5% 0;*/
+        /*    padding: 0.8rem 2rem;*/
+        /*    !* background-color: var(--bg-color); *!*/
+        /*    border-bottom: 1px solid #ccc;*/
+        /*}*/
+
+        /*.header-container {*/
+        /*    margin: 0 5%;*/
+        /*    padding: 0.8rem 2rem;*/
+        /*    border-bottom: 1px solid #ccc;*/
+        /*}*/
+
 
         .header {
             display: flex;
