--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -1,5 +1,5 @@
 <!-- fragments/nav-bar.html -->
-<div th:fragment="nav-bar" style="width: 25%;">
+<div th:fragment="nav-bar" style="width: 25%; border: 1px solid #ccc; text-align: center;">
   <aside style="padding: 3%">
     <h3>실시간 인기 검색어</h3>
     <ol>
