chore: layout 수정
탭 제목 수정

Resolves: #1

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>레이아웃 수정</title>
+  <title>CenSquare</title>
   <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<div class="wrapper">
 
+<div class="wrapper">
 
   <!-- Header Fragment -->
   <header th:replace="~{fragments/header :: header}"></header>
