--- a/src/main/resources/templates/layout-nobar.html
+++ b/src/main/resources/templates/layout-nobar.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>레이아웃 수정</title>
+  <title>CenSquare</title>
   <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
+
 <div class="wrapper">
 
   <!-- Header Fragment -->
